<resources>
    <string name="app_name">MyTestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint_text"> e.x type in as  Vanilla)</string>
    <string name="detail_submit_view">Save</string>
    <string name="detail_comment">Provide your comments</string>
    <string name="detail_comment_section">Please provide your comments for the image</string>
    <string name="detail_comment_clear">Clear</string>
    <string name="demo_data">Demo</string>
    <string name="network_check">No Network, Check Please</string>
    <string name="retry_label">Retry Again</string>
    <string name="network_online">You are now Connected</string>
    <string name="connect_label">Already Connected</string>
    <string name="image_describe">image describe</string>
    <bool name="portrait">true</bool>
    <bool name="landscape">true</bool>
    <string name="empty">""</string>
</resources>