<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_header"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DetailFragment">

    <LinearLayout
        android:id="@+id/headerSection"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_backNavigate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:textSize="13sp"
            android:layout_gravity="center"
            android:elevation="5dp"
            android:background="@drawable/bg_search_corners"
            android:src="@drawable/ic_keyboard_backspace"
            android:paddingLeft="15dp"
            android:paddingEnd="20dp" />

        <TextView
            android:id="@+id/tv_ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:text="@string/demo_data"
            android:fontFamily="@font/source_code_pro"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_describe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextTextMultiLine"
            android:hint="@string/detail_comment"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/detailImage"
            app:layout_constraintStart_toStartOf="@id/detailImage"
            app:layout_constraintEnd_toEndOf="@id/detailImage"
            app:hintTextColor="@color/search_hint_text_color"
            app:hintTextAppearance="@style/AppThemeTextAppearenceClear"
            app:boxStrokeWidth="1dp"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/background_white"
            android:backgroundTint="@color/background_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_Commentsection"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:textColor="@color/background_white"
                android:textColorHint="@color/header_bg_start"
                android:gravity="left|top"
                android:backgroundTint="@color/background_white"
                android:inputType="text"
                android:cursorVisible="true"
               android:textCursorDrawable="@drawable/cursor_bg"
                android:maxLines="10"
                android:focusable="true"
                android:lineSpacingExtra="5dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:text="@string/detail_submit_view"
            style="@style/AppThemeTextAppearenceSave"
            app:layout_constraintTop_toBottomOf="@id/btnClear"
            app:layout_constraintEnd_toStartOf="@id/btnClear"
            app:layout_constraintBottom_toTopOf="@id/btnClear"
            android:layout_marginEnd="15dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:background="@drawable/bg_search_layout" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:text="@string/detail_comment_clear"
            style="@style/AppThemeTextAppearenceClear"
            app:layout_constraintTop_toBottomOf="@id/editTextTextMultiLine"
            app:layout_constraintEnd_toEndOf="@id/editTextTextMultiLine"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_clear" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>